--- a/pages/edit/edit.wxml
+++ b/pages/edit/edit.wxml
@@ -3,8 +3,8 @@
     <view class="form-item">
       <text class="label">书名</text>
       <input 
-        name="title" 
-        value="{{book.title}}" 
+        name="bookName" 
+        value="{{book.bookName}}" 
         placeholder="请输入书名"
       />
     </view>
@@ -20,10 +20,10 @@
 
     <view class="form-item">
       <text class="label">封面</text>
-      <image 
-        src="{{book.cover || '/images/default-cover.png'}}" 
-        class="cover"
-        bindtap="chooseCover"
+      <input 
+        name="cover" 
+        value="{{book.cover}}" 
+        placeholder="请输入封面"
       />
     </view>
 
